fixed footer resize overlap issue

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -35,6 +35,7 @@ h2 img {
 html,body{
   height: 100%;
 }
-footer, .push{
+.footer{
   height: 75px;
+  background: white;
 }
